--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -6,32 +6,32 @@ on:
       - master
   pull_request:
     branches:
-      - main
+      - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
-    
-    - name: Install dependencies
-      run: npm install
-    
-    - name: Run tests
-      run: npm run test -- --watch=false --browsers=ChromeHeadless
-    
-    - name: Build the app
-      run: npm run build
-    
-    - name: Upload build artifacts
-      uses: actions/upload-artifact@v3  # Updated to v3
-      with:
-        name: build
-        path: dist/
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+      
+      - name: Install dependencies
+        run: npm install
+      
+      - name: Run tests
+        run: npm run test -- --watch=false --browsers=ChromeHeadless
+      
+      - name: Build the app
+        run: npm run build
+      
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: build
+          path: dist/
