--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -5,33 +5,62 @@ on:
     branches:
       - master
   pull_request:
-    branches:
-      - master
+    types:
+      - opened
+  workflow_dispatch:
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
-    
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
-      
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/checkout@v4
+
+      - name: Cache Node Modules
+        uses: actions/cache@v4
         with:
-          node-version: '14'
-      
+          path: ~/.npm
+          key: node-modules-${{ hashFiles('**/package-lock.json') }}
+
       - name: Install dependencies
-        run: npm install
-      
+        run: npm ci
+
       - name: Run tests
         run: npm run test -- --watch=false --browsers=ChromeHeadless
-      
+
+  build:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Cache Node Modules
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: node-modules-${{ hashFiles('**/package-lock.json') }}
+
+      - name: Install dependencies
+        run: npm ci
+
       - name: Build the app
         run: npm run build
-      
+
       - name: Upload build artifacts
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
-          name: build
+          name: dist-folder
           path: dist/
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Download built files
+        uses: actions/download-artifact@v4
+        with:
+          name: dist-folder
+
+      - name: List build output
+        run: ls -R
