--- a/.github/workflows/deploy-to-s3.yml
+++ b/.github/workflows/deploy-to-s3.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '14'  # Update if you're using another version
+        node-version: 'node' # Update if you're using another version
 
     - name: Install dependencies
       run: npm install
