--- a/.github/workflows/deploy-to-s3.yml
+++ b/.github/workflows/deploy-to-s3.yml
@@ -23,7 +23,7 @@ jobs:
       run: npm install
 
     - name: Build Angular app
-      run: npm run build -- --prod
+      run: npm run build
 
     - name: List dist contents (debugging)
       run: ls -R dist
