--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fullcalendar/interaction": "^6.1.17",
     "chart.js": "^3.9.1",
     "express": "^4.18.2",
+    "import-aliases": "^1.0.2",
     "ng2-charts": "^3.1.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
